<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_edit_raspi"
        android:icon="?attr/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/action_edit_raspi"
        android:titleCondensed="@string/action_edit"
        android:visible="false"/>
    <item
        android:id="@+id/menu_reboot"
        android:icon="?attr/ic_action_restart"
        android:showAsAction="always|withText"
        android:title="@string/action_shutdown"
      	android:visible="false"	/>
    <item
        android:id="@+id/menu_new_raspi"
        android:icon="?attr/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_raspi"
        android:titleCondensed="@string/action_new"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="?attr/ic_action_delete"
        android:showAsAction="never"
        android:title="@string/action_delete_raspi"
        android:titleCondensed="@string/action_delete"
        android:visible="false"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="?attr/ic_action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>