<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:showDividers="beginning|middle|end"
        tools:context=".NewRaspiActivity" >

        <TextView
            android:id="@+id/new_raspi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_raspi_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/raspi_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/raspi_device_name_hint"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:paddingTop="8dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/raspi_host_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/raspi_device_host_hint"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:paddingTop="8dp" />

        <EditText
            android:id="@+id/raspi_user_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/raspi_device_user_hint"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:paddingTop="8dp" />

        <EditText
            android:id="@+id/raspi_pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/raspi_device_password_hint"
            android:inputType="text|textPassword"
            android:maxLines="1"
            android:paddingTop="8dp" />

        <EditText
            android:id="@+id/raspi_sudoPass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/raspi_device_sudo_password_hint"
            android:inputType="text|textPassword"
            android:maxLines="1"
            android:paddingTop="8dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/raspi_ssh_port_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="number"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:text="@string/default_ssh_port" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/raspi_ssh_port_editText"
                android:layout_alignBottom="@+id/raspi_ssh_port_editText"
                android:layout_alignParentLeft="true"
                android:paddingLeft="6dp"
                android:paddingRight="16dp"
                android:text="@string/ssh_port"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/new_raspi_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/raspi_desc_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_raspi_description_hint"
            android:inputType="textMultiLine"
            android:paddingTop="8dp" >

        </EditText>

        <Button
            android:id="@+id/new_raspi_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveButtonClick"
            android:paddingTop="8dp"
            android:text="@string/new_raspi_button_save" />

    </LinearLayout>

</ScrollView>