<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:showDividers="beginning|middle|end"
        tools:context=".NewRaspiActivity" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/textAuthMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/new_raspi_auth_method"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinnerAuthMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textAuthMethod" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/text_ssh_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raspi_device_password_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editText_ssh_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_ssh_password"
                android:ems="10"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_key_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/raspi_auth_keyfile_hint"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/buttonKeyfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_key_file"
                android:onClick="onButtonClick"
                android:text="@string/raspi_auth_button_keyfile" />

            <CheckBox
                android:id="@+id/checkboxAsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonKeyfile"
                android:checked="true"
                android:onClick="onCheckboxClick"
                android:text="@string/raspi_key_checkbox_text" />

            <RelativeLayout
                android:id="@+id/rel_key_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkboxAsk"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/text_key_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/raspi_key_password_hint"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextKeyPw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_key_pw"
                    android:ems="10"
                    android:inputType="textPassword" />

            </RelativeLayout>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/relativeLayoutPortSudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp" >

            <RelativeLayout
                android:id="@+id/relativeLayoutPort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp" >

                <EditText
                    android:id="@+id/edit_raspi_ssh_port_editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelSshPort"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minEms="3"
                    android:paddingLeft="8dp"
                    android:text="@string/default_ssh_port" />

                <TextView
                    android:id="@+id/labelSshPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingRight="8dp"
                    android:text="@string/ssh_port"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutSudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/relativeLayoutPort"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/labelSudoPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/sudo_password"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/edit_raspi_sudoPass_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labelSudoPass"
                    android:ems="10"
                    android:hint="@string/raspi_device_sudo_password_hint"
                    android:inputType="text|textPassword"
                    android:maxLines="1"
                    android:paddingLeft="8dp" />

            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/new_raspi_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:paddingTop="8dp"
            android:text="@string/new_raspi_button_save" />
    </LinearLayout>

</ScrollView>